--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<nav class="navbar">
 			<div class="container-lg justify-content-start">
 				<a href="/index.html" target="_blank" class="text-decoration-none"><h2 class="pe-3"><i class="bi bi-alarm text-primary" style="font-size: 2rem"></i> Timer</h2></a>
-				<a href="/Walk%20remider.html" target="_blank" class="text-decoration-none"><h2><i class="fa-solid fa-person-walking"></i> Walk</h2></a>
+				<a href="/Walk%20remider.html" target="_blank" class="text-decoration-none me-auto"><h2><i class="fa-solid fa-person-walking"></i> Walk</h2></a>
+				<a href="file:///C:/Users/ATOLAGBE%20GBENGA/Desktop/Programs/health-app/todo.html" target="_blank" class="text-decoration-none"><h2><i class="bi bi-calendar-event"></i> To-do</h2></a>
 			</div>
 		</nav>
 		<main>
