--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<button class="btn btn-primary btn-lg col-xl-3 col-sm-3" id="start">Start</button>
 				</div>
 			</div>
-			<audio src="Adekunle-Gold-AG-Baby-ft.-Nailah-Blackman.mp3" id="alarm" loop="true"></audio>
+			<audio src="Asake-–-Joha.mp3" id="alarm" loop="true"></audio>
 			<div class="container-lg">
 				<div class="col display-5 text-center">
 					<div id="activity-display"></div>
